--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -4,7 +4,7 @@
     @apply bg-white;
 }
 
-.promo-box{
+.promo-box {
     @apply bg-black flex flex-col items-center justify-center h-8 lg:h-10;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .nav-logo {
-    @apply h-8 2xl:h-10;
+    @apply h-8 2xl:h-10 w-auto;
 }
 
 .burger-menu-button {
