--- a/app/components/Categories/Categories.css
+++ b/app/components/Categories/Categories.css
@@ -5,9 +5,9 @@
 }
 
 .category-image {
-    @apply hover:scale-105 cursor-pointer transition-all duration-300 ease-in-out;
+    @apply hover:scale-105 cursor-pointer transition-all duration-300 ease-in-out 2xl:w-[240px] 2xl:mt-8 2xl:mb-3;
 }
 
-.category-label{
-    @apply text-black mt-3 font-semibold;
+.category-label {
+    @apply text-black mt-3 font-semibold 2xl:text-2xl;
 }
