--- a/app/components/ProductsCarousel/ProductsCarousel.css
+++ b/app/components/ProductsCarousel/ProductsCarousel.css
@@ -13,7 +13,7 @@
 }
 
 .container-button {
-    @apply bg-blue-400 hover:bg-blue-500 transition-all duration-300 ease-in-out py-1.5 px-3 2xl:px-5 2xl:py-3 2xl:text-2xl;
+    @apply bg-blue-400 hover:bg-blue-500 transition-all duration-300 ease-in-out py-1.5 px-3 2xl:px-5 2xl:py-3 2xl:text-2xl font-semibold;
 }
 
 .carousel-box{
