--- a/app/components/Benefits/Benefits.css
+++ b/app/components/Benefits/Benefits.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 
-.benefits-container {
+.benefits-container{
+    @apply bg-gray-50;
+}
+
+.benefits-content {
     @apply flex flex-col justify-around max-w-[92%] md:flex-row md:grid md:grid-cols-2 lg:flex lg:justify-between gap-10 mx-auto mt-10;
 }
 
