--- a/app/components/ProductFilters/ProductFilters.css
+++ b/app/components/ProductFilters/ProductFilters.css
@@ -17,19 +17,31 @@
 }
 
 .filter-title {
-    @apply text-sm font-semibold text-gray-700 mb-2;
+    @apply text-sm font-semibold text-gray-700 mb-2 lg:text-base;
 }
 
 .filter-options {
-    @apply space-y-1 text-sm text-gray-600;
+    @apply space-y-1 text-sm text-gray-600 lg:text-base;
 }
 
-.checkbox-input {
-    @apply mr-2 cursor-pointer;
+.filter-item {
+    @apply cursor-pointer flex items-center;
+}
+
+.filter-item.selected {
+    @apply font-bold;
 }
 
 .color-input {
-    @apply w-5 h-5 rounded-full border border-gray-300 cursor-pointer;
+    @apply w-5 h-5 lg:w-8 lg:h-8 rounded-full border border-gray-300 cursor-pointer;
+}
+
+.color-input.selected{
+    @apply border-2 border-blue-600;
+}
+
+.input-price {
+    @apply w-full;
 }
 
 .apply-filter-btn {
