--- a/app/pages/products/[id]/ProductPage.css
+++ b/app/pages/products/[id]/ProductPage.css
@@ -21,7 +21,7 @@
 }
 
 .product-main-image {
-  @apply aspect-square bg-white shadow-sm rounded-md overflow-hidden mb-4 lg:h-full;
+  @apply aspect-square bg-white shadow-sm rounded-md overflow-hidden mb-4 lg:mb-0 lg:h-[475px];
 }
 
 .product-thumbnail-button {
@@ -33,7 +33,7 @@
 }
 
 .product-info {
-  @apply flex flex-col;
+  @apply flex flex-col justify-between;
 }
 
 .product-title {
@@ -49,7 +49,7 @@
 }
 
 .product-info-bottom {
-  @apply flex flex-col items-center justify-between mt-5 md:mt-8;
+  @apply flex flex-col items-center justify-between;
 }
 
 .quantity-box {
@@ -65,7 +65,7 @@
 }
 
 .stock-quantity {
-  @apply text-gray-500;
+  @apply text-gray-500 text-sm md:text-base;
 }
 
 .buttons-group {
