--- a/app/pages/products/[id]/ProductPage.css
+++ b/app/pages/products/[id]/ProductPage.css
@@ -17,11 +17,11 @@
 }
 
 .thumbnails-grid {
-  @apply grid grid-cols-3 gap-3 lg:flex lg:flex-col w-60 md:w-122 lg:max-w-22;
+  @apply grid grid-cols-3 gap-3 lg:flex lg:flex-col w-60 md:w-122 lg:max-w-18;
 }
 
 .product-main-image {
-  @apply aspect-square bg-white shadow-sm rounded-md overflow-hidden mb-4 lg:mb-0 lg:h-[475px];
+  @apply aspect-square bg-white shadow-sm rounded-md overflow-hidden mb-4 lg:mb-0 lg:h-[468px];
 }
 
 .product-thumbnail-button {
@@ -33,15 +33,15 @@
 }
 
 .product-info {
-  @apply flex flex-col justify-between;
+  @apply flex flex-col;
 }
 
 .product-title {
-  @apply text-3xl md:text-4xl font-bold tracking-tight mb-4 md:mb-2;
+  @apply text-3xl md:text-4xl font-bold tracking-tight mb-1 md:mb-2;
 }
 
 .product-price {
-  @apply text-2xl md:text-3xl font-semibold text-blue-700 mb-6;
+  @apply text-2xl md:text-3xl font-semibold text-blue-700 mb-3;
 }
 
 .product-description {
@@ -82,4 +82,16 @@
 
 .add-to-favorites-button {
   @apply border border-gray-300 hover:bg-gray-50;
+}
+
+.additional-infos-grid {
+  @apply grid grid-cols-2 md:grid-cols-2 gap-4 w-full mt-6;
+}
+
+.additional-info-icon {
+  @apply h-5 w-5 text-blue-600 mr-3;
+}
+
+.additional-info-label {
+  @apply text-sm;
 }
