--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -37,9 +37,9 @@
 }
 
 .nav-list {
-    @apply font-medium flex flex-col p-4 md:p-0 lg:flex-row lg:space-x-8 md:mt-0 md:border-0 md:bg-white;
+    @apply font-medium flex flex-col p-4 md:p-0 lg:flex-row lg:space-x-4 md:mt-0 md:border-0 md:bg-white;
 }
 
 .nav-item {
-    @apply block py-3 lg:py-0 text-gray-950 text-lg 2xl:text-2xl font-medium transition-all duration-300 ease-in-out hover:text-white hover:lg:px-4 hover:bg-[#38B6FF];
+    @apply block py-3 lg:px-3 lg:py-1 text-gray-950 text-lg lg:text-base 2xl:text-2xl font-medium transition-all duration-300 ease-in-out hover:text-white hover:bg-[#38B6FF];
 }
