--- a/app/components/ProductsCarousel/ProductsCarousel.css
+++ b/app/components/ProductsCarousel/ProductsCarousel.css
@@ -13,7 +13,7 @@
 }
 
 .container-button {
-    @apply bg-blue-400 hover:bg-blue-500 transition-all duration-300 ease-in-out py-1.5 px-3 2xl:px-5 2xl:py-3 2xl:text-2xl font-semibold;
+    @apply text-white bg-blue-500 hover:bg-blue-600 transition-all duration-300 ease-in-out py-1.5 px-3 2xl:px-5 2xl:py-3 2xl:text-2xl font-semibold;
 }
 
 .carousel-box {
@@ -41,7 +41,7 @@
 }
 
 .carousel-arrow {
-    @apply absolute top-1/2 transform -translate-y-1/2 text-white bg-blue-400 hover:bg-blue-500 shadow-md rounded-full z-10 transition-all duration-300 text-xl h-9 w-9 cursor-pointer flex items-center justify-center;
+    @apply absolute top-1/2 transform -translate-y-1/2 text-white bg-blue-500 hover:bg-blue-600 shadow-md rounded-full z-10 transition-all duration-300 text-xl h-9 w-9 cursor-pointer flex items-center justify-center;
 }
 
 .carousel-arrow.left {
