--- a/app/components/ProductCard/ProductCard.css
+++ b/app/components/ProductCard/ProductCard.css
@@ -14,5 +14,5 @@
 }
 
 .add-cart-button {
-    @apply w-full text-white text-base lg:text-sm bg-blue-500 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-sm p-3 text-center transition-all duration-300 ease-in-out 2xl:text-xl 2xl:py-3.5 whitespace-nowrap overflow-hidden text-ellipsis;
+    @apply cursor-pointer w-full text-white text-base lg:text-sm bg-blue-500 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-sm p-3 text-center transition-all duration-300 ease-in-out 2xl:text-xl 2xl:py-3.5 whitespace-nowrap overflow-hidden text-ellipsis;
 }
