--- a/app/components/QuantitySelector/QuantitySelector.css
+++ b/app/components/QuantitySelector/QuantitySelector.css
@@ -9,11 +9,14 @@
 }
 
 .quantity-button {
-  @apply h-10 w-10 bg-gray-200 transition-colors duration-200;
+  @apply flex items-center h-9 px-3
+         transition-all
+         ease-in-out duration-300;
 }
 
 .quantity-button.enabled {
-  @apply hover:text-black cursor-pointer;
+  @apply hover:text-black cursor-pointer 
+         hover:bg-gray-100;
 }
 
 .quantity-button.disabled {
@@ -21,9 +24,10 @@
 }
 
 .quantity-icon {
-  @apply text-gray-900;
+  @apply text-blue-600;
 }
 
 .quantity-input {
-  @apply h-10 w-12 border-0 text-center focus:ring-0 focus:outline-none text-gray-800;
+  @apply h-9 w-11 border-0 text-center focus:ring-0
+         focus:outline-none text-gray-800;
 }
