--- a/app/pages/contact/ContactPage.css
+++ b/app/pages/contact/ContactPage.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
 .contact-page-container {
-    @apply bg-gray-50 px-4 py-6 h-dvh lg:px-10;
+    @apply bg-gray-50;
+}
+
+.contact-page-content {
+    @apply px-4 py-6 h-auto lg:px-10;
+}
+
+.map-box{
+    @apply mb-16;
+}
+
+.map-box-title {
+    @apply text-2xl lg:text-3xl font-bold mb-4 mt-8 lg:mt-15 text-center text-gray-800;
 }
