--- a/app/pages/contact/ContactPage.css
+++ b/app/pages/contact/ContactPage.css
@@ -5,13 +5,18 @@
 }
 
 .contact-page-content {
-    @apply px-4 py-6 h-auto lg:px-10;
+    @apply h-auto px-4 py-6 lg:px-10;
 }
 
-.map-box{
-    @apply mb-16;
+.map-box {
+    @apply mb-0;
 }
 
-.map-box-title {
+.map-box-title,
+.faq-box-title {
     @apply text-2xl lg:text-3xl font-bold mb-4 mt-8 lg:mt-15 text-center text-gray-800;
+}
+
+.faq-box {
+    @apply px-4 py-6 md:px-10 lg:w-6xl lg:mx-auto;
 }
