--- a/app/components/Footer/Footer.css
+++ b/app/components/Footer/Footer.css
@@ -8,6 +8,10 @@
     @apply container mx-auto px-4 py-10;
 }
 
+.footer-middle {
+    @apply grid grid-cols-1 md:grid-cols-4 gap-8;
+}
+
 .brand-box {
     @apply flex items-center mb-4;
 }
