--- a/app/pages/contact/ContactPage.css
+++ b/app/pages/contact/ContactPage.css
@@ -5,7 +5,7 @@
 }
 
 .contact-page-content {
-    @apply h-auto px-4 py-6 lg:px-10;
+    @apply h-auto px-4 py-6 lg:px-10 grid grid-cols-1 md:grid-cols-2 gap-8 mb-16;
 }
 
 .map-box {
